# ofsetsMain

./: .gitignore  MuOnline_S3E1_Actions_1.02Q_Part1.txt  MuOnline_S3E1_Actions_1.02Q_Part2.txt  log_compile_mutracker  log_compile_mutracker_v2  muonline_fullproject_prompt.md  muonline_tracker_prompt.md  new_offsets_section.txt  offsets_main_exe.txt  unpack_main.py
MuOffsetLogger/: FunctionScanner.cpp  FunctionScanner.h  GameMonitor.cpp  GameMonitor.h  Logger.cpp  Logger.h  MuOffsetLogger.def  MuOffsetLogger.sln  MuOffsetLogger.vcxproj  MuOffsetLogger.vcxproj.filters  OffsetDatabase.cpp  OffsetDatabase.h  OffsetStore.cpp  OffsetStore.h  PEAnalyzer.cpp  PEAnalyzer.h  ProcessMonitor.cpp  ProcessMonitor.h  README.md  dllmain.cpp  main.cpp
MuTracker/: CMakeLists.txt  CMakePresets.json  README.md  config.json
MuTracker/Shared/: IPC_Protocol.h  SharedStructs.h
MuTracker/dll/MuTrackerDLL/: dllmain.cpp
MuTracker/loader/MuTrackerLoader/: MainWindow.cpp  MainWindow.h  MuTracker.manifest  MuTracker.rc  TraceViewer.cpp  TraceViewer.h  main.cpp  resource.h
MuTracker/src/attach/: DLLInjector.cpp  DLLInjector.h  ProcessAttacher.cpp  ProcessAttacher.h
MuTracker/src/config/: Config.cpp  Config.h
MuTracker/src/core/: CallTracer.cpp  CallTracer.h  GameActionMonitor.cpp  GameActionMonitor.h  HookEngine.cpp  HookEngine.h  MemoryUtils.cpp  MemoryUtils.h  PatternScanner.cpp  PatternScanner.h
MuTracker/src/disasm/: DisasmEngine.cpp  DisasmEngine.h  hde32.c  hde32.h  table32.h
MuTracker/src/log/: Logger.cpp  Logger.h
